api-gateway added authorization filter

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -10,3 +10,5 @@ spring:
         initial-interval: 1000
         max-interval: 2000
         multiplier: 1.1
+
+spring.config.import: optional:configserver:http://localhost:8888
