--- a/pom.xml
+++ b/pom.xml
@@ -130,11 +130,17 @@
 		<dependency>
 			<groupId>com.user-messaging-system</groupId>
 			<artifactId>core-library</artifactId>
-			<version>1.0.2-SNAPSHOT</version>
+			<version>1.0.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>6.1.12</version>
 		</dependency>
 	</dependencies>
 
