--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
 	<properties>
 		<java.version>21</java.version>
-		<spring-cloud.version>2023.0.3</spring-cloud.version>
+		<spring-cloud.version>2023.0.4</spring-cloud.version>
 	</properties>
 
 	<dependencyManagement>
@@ -142,7 +142,15 @@
 			<artifactId>spring-tx</artifactId>
 			<version>6.1.12</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>io.zipkin.reporter2</groupId>
+            <artifactId>zipkin-reporter-brave</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
@@ -152,5 +160,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
